--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,8 @@
         {
             "type": "pwa-chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
+            "name": "Open about.html",
+            "file": "c:\\Users\\rober\\OneDrive\\Documents\\Courses\\Year 3 Semester 1\\Web Development\\Project 1\\webDev\\about.html"
         }
     ]
 }
